--- a/public/styles.css
+++ b/public/styles.css
@@ -19,6 +19,11 @@ nav {
     align-items: center;
     padding: 0 1em;
 }
+.nav-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .tools {
     display: flex;
     justify-content: space-between;
@@ -29,6 +34,7 @@ nav {
     background-color: #2c74b3;
     padding: 0 0.5em;
     cursor: pointer;
+    margin: 0 0.5em;
 }
 .tools:hover {
     background-color: #205295;
