--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,37 +9,6 @@ body,
 .leaflet-container {
     height: 100%;
 }
-/* Navigation bar */
-nav {
-    background-color: #0a2647;
-    color: white;
-    height: 4.99%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1em;
-}
-.nav-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.tools {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid white;
-    border-radius: 5px;
-    color: white;
-    background-color: #2c74b3;
-    padding: 0 0.5em;
-    cursor: pointer;
-    margin: 0 0.5em;
-}
-.tools:hover {
-    background-color: #205295;
-}
-
 /* Map */
 .loading {
     display: flex;
@@ -63,10 +32,11 @@ nav {
     margin: 0;
 }
 .left {
-    padding-top: 0.5em;
+    padding: 0.5em;
     text-align: center;
     font-size: 1.5vh;
     background-color: #2c74b3;
+    color: white;
 }
 .left-button {
     padding: 0.25em;
@@ -91,15 +61,7 @@ option {
     width: 100%;
 }
 
-/* Footer */
-footer {
-    background-color: #144272;
-    color: #fffbeb;
-    height: 3%;
-    text-align: center;
-}
-
-.footerlink {
-    text-decoration: none;
-    color: #fffbeb;
+.range {
+    background-color: white;
+    border-radius: 5px;
 }
